static/styles/main.css
body {
	background-color: #171812;
	margin: auto;
	font-size: 16px;
}

#maindiv {
	max-width: 90%;
	min-width: 30ch;
	margin: auto;
}

a { text-decoration: none; }
a:link{ color: #f8f8f2}
a:visited{ color: #f8f8f2}
a:hover{ color: #e6db74}


#wrapper {
	width: auto;
	font-family: monospace;
	margin: 0 1em 0 1em;
}

/*--- page header ----*/

#header {
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: space-between;
	align-items: center;
	margin: 0.5em 0 0.5em 0;
	width: 100%;
	height: 2em;
	font-family: monospace;
	font-size: 150%;
}	

#logo {
	color: #e6db74;
	padding: 0.5em;
	font-size: 1.25em;

}
#logo a { text-decoration: none; }
#logo a:link { color: #e6db74}
#logo a:visited{ color: #e6db74}
#logo a:hover{ color: #f8f8f2}

#nav {
	font-family: monospace;
	font-size: 0.75em;
	word-spacing: 2ch;
	padding: 0.5em;
}

/*--- footer ----*/

#footer {
	padding-top: 1em;
	color: #75715e;
	text-align: center;
	font-size: 0.75em;
}


/*--- paste info box ----*/

#info {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: flex-start;
	align-items: center;
	border: 3px solid;
	border-color: #272822;
	max-height:3em;
	min-height: 1.5em;
	padding: 0.3em 3ch 0.3em 3ch;
	color: #888481;
	font-size: 0.8em;
}
.pipediv {
	margin: 0 0.5em 0 0.5em;
}

#info a:hover{ color: #f92672; }

/*--- paste body ----*/

#content {
	background-color: #272822;
	padding: 0 0 0.25em 0;
	overflow-x: auto;
	
}

.linenos { 
	list-style: decimal;
	color: #888481;
	padding: 0;
	margin: 0em 0.5em 0em 2ch;
	min-height: 1.25em;
}

.pastelines {
	white-space: pre;
	word-wrap: break-word;
	tab-size: 4;
	padding: 0;
	margin: 0;
	color: #B5AFA3;

}

/*--- new paste page ----*/

#pastebox {
	box-sizing: border-box;
	resize: vertical;
	width: 100%;
	height: auto;
	min-height: 30em;
	margin: auto;
	padding: 0.5em;
	border: 0;
	background-color: #272822;
	color: #B5AFA3;
	outline-color: #55515e;
}
::selection {
	color: #49483e;
	background: #f8f8f2;
}
#controls {
	color: #888481;
	border: 3px solid;
	border-color: #272822;
	padding: 0.5em;
	outline-color: #888481;

}
#lexerselect {
	color: inherit;
	background-color: #272822;
	border-color: #272822;
	outline-color: inherit;
}
#ttlselect {
	color: inherit;
	background-color: #272822;
	border-color: #272822;
	outline-color: inherit;
}

#burninput {
	width: 6ch;
	border: 0;
	color: inherit;
	background-color: #272822;
	border-color: #272822;
	text-align: right;
	outline-color: inherit;

}

#pastebutton {
	color: inherit;
	background-color: #272822;
	border: 0;
	width: 8em;
	height: 1.5em;
	outline-color: #f8f8f2;
}

.marker {
	color: #49483e;
	background-color: #e6db74;
}

/*--- About pages ----*/
#about {
	padding: 2em 2ch 2em 2ch;
	color: #95917e;
	background-color: #272822;
	white-space: normal;
	font-size: 1em;
	font-family: monospace;
}
#about strong{
	color: #e5e1de;
}

#about li{
	color: #e5e1de;
}

#about #pierce{
	color: #ffffff;
	font-weight: bold;
}
/*--- error pages ----*/

#errorpage h1{
	color: #960050;
}
#errorpage {
	color:  #f8f8f2;
	text-align: center;
}

/*--- paste deletion confirmation ----*/

#deletepage {
	color:  #a6e22e;
	text-align: center;
}

/*--- pygments stylesheet ----*/

.hll { background-color: #49483e }
.c { color: #75715e } /* Comment */
.err { color: #760030; background-color: #f92672 } /* Error */
.k { color: #66d9ef } /* Keyword */
.l { color: #ae81ff } /* Literal */
.n { color: #f8f8f2 } /* Name */
.o { color: #f92672 } /* Operator */
.p { color: #f8f8f2 } /* Punctuation */
.cm { color: #75715e } /* Comment.Multiline */
.cp { color: #75715e } /* Comment.Preproc */
.c1 { color: #75715e } /* Comment.Single */
.cs { color: #75715e } /* Comment.Special */
.gd { color: #f92672 } /* Generic.Deleted */
.ge { font-style: italic } /* Generic.Emph */
.gi { color: #a6e22e } /* Generic.Inserted */
.gs { font-weight: bold } /* Generic.Strong */
.gu { color: #75715e } /* Generic.Subheading */
.kc { color: #66d9ef } /* Keyword.Constant */
.kd { color: #66d9ef } /* Keyword.Declaration */
.kn { color: #f92672 } /* Keyword.Namespace */
.kp { color: #66d9ef } /* Keyword.Pseudo */
.kr { color: #66d9ef } /* Keyword.Reserved */
.kt { color: #66d9ef } /* Keyword.Type */
.ld { color: #e6db74 } /* Literal.Date */
.m { color: #ae81ff } /* Literal.Number */
.s { color: #e6db74 } /* Literal.String */
.na { color: #a6e22e } /* Name.Attribute */
.nb { color: #f8f8f2 } /* Name.Builtin */
.nc { color: #a6e22e } /* Name.Class */
.no { color: #66d9ef } /* Name.Constant */
.nd { color: #a6e22e } /* Name.Decorator */
.ni { color: #f8f8f2 } /* Name.Entity */
.ne { color: #a6e22e } /* Name.Exception */
.nf { color: #a6e22e } /* Name.Function */
.nl { color: #f8f8f2 } /* Name.Label */
.nn { color: #f8f8f2 } /* Name.Namespace */
.nx { color: #a6e22e } /* Name.Other */
.py { color: #f8f8f2 } /* Name.Property */
.nt { color: #f92672 } /* Name.Tag */
.nv { color: #f8f8f2 } /* Name.Variable */
.ow { color: #f92672 } /* Operator.Word */
.w { color: #f8f8f2 } /* Text.Whitespace */
.mb { color: #ae81ff } /* Literal.Number.Bin */
.mf { color: #ae81ff } /* Literal.Number.Float */
.mh { color: #ae81ff } /* Literal.Number.Hex */
.mi { color: #ae81ff } /* Literal.Number.Integer */
.mo { color: #ae81ff } /* Literal.Number.Oct */
.sb { color: #e6db74 } /* Literal.String.Backtick */
.sc { color: #e6db74 } /* Literal.String.Char */
.sd { color: #e6db74 } /* Literal.String.Doc */
.s2 { color: #e6db74 } /* Literal.String.Double */
.se { color: #ae81ff } /* Literal.String.Escape */
.sh { color: #e6db74 } /* Literal.String.Heredoc */
.si { color: #e6db74 } /* Literal.String.Interpol */
.sx { color: #e6db74 } /* Literal.String.Other */
.sr { color: #e6db74 } /* Literal.String.Regex */
.s1 { color: #e6db74 } /* Literal.String.Single */
.ss { color: #e6db74 } /* Literal.String.Symbol */
.bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
.vc { color: #f8f8f2 } /* Name.Variable.Class */
.vg { color: #f8f8f2 } /* Name.Variable.Global */
.vi { color: #f8f8f2 } /* Name.Variable.Instance */
.il { color: #ae81ff } /* Literal.Number.Integer.Long */

